--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     font-family: 'Lato', sans-serif;
     font-size: 24px;
@@ -65,4 +70,14 @@ aside {
     padding-left: 35%;
     height: 100%;
     margin-top: -40px;
+}
+
+.bull {
+    height: 40px;
+    width: 40px;
+    padding-left: 20px;
+}
+
+.icons {
+    margin-left: 45%;
 }
